增加基础包的配置文件，修改新增一些更新包的配置项